[chaos]:修改删除接口/增加批量删除的能力
